fix: Remove "running" from the create app input object
